snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.module.sha512
60ed706a7e544594e3dc136b6ba1eeb08df742d4427b2c1b98756ae013741a33a24f6bf4865ef3eee2dd61d99b2b6c3c8dce202abf546d7bbfaedaa1bcfa72e7